add update token route
