# src/controllers/auth.controller.ts
@@ -72,6 +72,23 @@ export class AuthController extends Controller {
     }
 
     @Security(SECURITY_NAME.bearerAuth)
+    @Post("/update_platform_token")
+    public async updatePlatformTokenData(@Request() req: express.Request): Promise<{ token: string; code: number } | { message: string }> {
+        try {
+            const isAdmin = await checkIfItIsAdmin(req);
+            if (!isAdmin) throw new AuthError(SECURITY_MESSAGES.UNAUTHORIZED);
+
+            const data = await serviceInstance.updatePlatformTokenData();
+
+            this.setStatus(HTTP_CODES.OK)
+            return data;
+        } catch (error) {
+            this.setStatus(error.code || HTTP_CODES.INTERNAL_ERROR);
+            return { message: error.message };
+        }
+    }
+
+    @Security(SECURITY_NAME.bearerAuth)
     @Get("/get_pam_to_auth_credential")
     public async getBosToAdminCredential(@Request() req: express.Request): Promise<IPamCredential | { message: string }> {
         try {
